2008-03-22  Brian Warner  <warner@lothar.com>

	* buildbot/process/buildstep.py (LogLineObserver.setMaxLineLength):
	new method to override the default 16KiB line length. Lines that
	are longer than this will cause the rest of the log file to be
	ignored. Thanks to Greg Ward for the patch. Closes #201.
	* buildbot/test/test_buildstep.py: new tests for log observers
	* docs/buildbot.texinfo (Adding LogObservers): document it

	* buildbot/slave/commands.py (ShellCommand): record more
	information in the 'header' section: how much we write into stdin,
	do we close stdin, are we using a PTY. There are lingering
	problems with PTYs and with closing stdin (see #198 and #158).
	This doesn't fix those problems, but it should provide more
	information to developers.

	* buildbot/status/client.py: hush pyflakes, log.msg vs log
	* buildbot/status/mail.py: same

	* buildbot/locks.py (debuglog): hush pyflakes

	* buildbot/steps/source.py (SVN.__init__): fix pyflakes: it
	doesn't like a variable named 'warnings' that shadows the import

	* buildbot/test/test_web.py: fix some pyflakes warnings, caused by
	having a variable name shadow a top-level import

	* buildbot/test/test_run.py (Disconnect.testBuild2): fix old
	cut-and-paste typo that was causing us to run the wrong callback

	* Makefile (pyflakes): sort+uniqify, since newer pyflakes isn't
	smart enough to do this on its own
	* buildbot/test/runutils.py (myGetProcessOutputAndValue): move this
	method out from test_vc.py, hush pyflakes complaints

	* buildbot/test/test_vc.py (Mercurial.serveHTTP): wait for the 'hg
	serve' command to be ready, by polling with twisted.web's
	client.getPage . Unfortunately mercurial doesn't flush its stdout
	at startup, so we can't just wait for the 'listening at..' line to
	be printed. This should fix the sporadic "connection refused" test
	failures I've seen on the metabuildbot when the buildslave is
	overloaded and 'hg serve' takes a while to start up.
